--- a/TASKS/TaskOnListsAndVectors/CMakeLists.txt
+++ b/TASKS/TaskOnListsAndVectors/CMakeLists.txt
@@ -1,19 +1,19 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(College_project1 LANGUAGES CXX)
+project(TaskOnListsAndVectors LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(College_project1 main.cpp
+add_executable(TaskOnListsAndVectors main.cpp
     college.h college.cpp
-    college_management.h college_management.cpp
     student.h student.cpp
     staff.h staff.cpp
-    personaldetails.h personaldetails.cpp)
+    personaldetails.h personaldetails.cpp
+    collegemanagement.h collegemanagement.cpp)
 
 include(GNUInstallDirs)
-install(TARGETS College_project1
+install(TARGETS TaskOnListsAndVectors
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
